styles/style.css
@import url(https://unpkg.com/purecss);
@import url(https://fonts.googleapis.com/css?family=Roboto:100,300&display=swap);
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css);

@media all {/* Defaults */
  :root {
    --color-primary-tint-1: #212121;
    --color-primary-tint-2: #292929;
    --color-primary-tint-3: #535353;
    --color-secondary: #E7E7E7;
  }
  * {
    color: var(--color-primary-tint-1);
    font-family: 'Roboto', 'Helvetica';

    user-select: none;
    -webkit-tap-highlight-color: transparent;
  }
  body {
    background-color: var(--color-secondary);

    padding: 2.5%;
  }
  p {
    text-align: justify;
    text-justify: inter-word;
  }
  a {
    text-decoration: none;
  }
}

@media all {/* Mix-ins */
  header, footer {
    text-align: center;
  }
  header ul, footer ul {
    max-width: 60%;
  }
  header, main, footer {
    display: flex;
    flex-flow: column;

    max-width: 60%;

    margin: 0 auto;
  }
  @media all and (max-width: 50em) {
    header, main, footer {
      max-width: 90%;
    }
  }
}

@media all {/* Nav */
  nav * {
    color: var(--color-primary-tint-2);
  }
}

@media all {/* Header */
  header section {
    padding: 1em;
  }
  header h1, header blockquote {
    margin: .25em;
  }
}

@media all {/* Footer */
  footer section * {
    color: var(--color-primary-tint-2);
  }
  footer em {
    color: var(--color-primary-tint-3);
  }
  footer > * {
    margin: 0 auto;
  }
  footer section {
    display: flex;
    flex-flow: column;
    justify-content: center;

    margin: 1em auto;
  }
  footer section > * {
    margin: .5em 0;
  }
}

/* Classes */

@media all {/* Horizontal */
  ul.horizontal {
    display: flex;
    justify-content: space-around;

    margin: 0 auto;
    padding: 0;

    min-width: 80%;

    list-style: none;
  }
  ul.horizontal * {
    display: flex;
    flex-flow: column;
    align-items: center;

    padding: 0 10%;
    min-width: .5em;
  }
}

@media all {/* No content */
  .no-content {
    text-align: center;
    margin: 3em 0;
  }

  .no-content::after {
    content: "No content for now."
  }
}

